ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: echo-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-app-service
            port:
              number: 8080
